--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: public  # The folder you want to deploy
+          folder: build  # The folder containing the built React app
           branch: gh-pages  # The branch to deploy to
           clean: true  # Automatically remove deleted files from the deployment
